--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,6 @@ services:
         - http_proxy
         - https_proxy
         - no_proxy
-    image: grow-control/server:latest
+    image: owl-grow-control/server:latest
     ports:
       - '8081:8081'
