--- a/tsconfig.compile.json
+++ b/tsconfig.compile.json
@@ -9,7 +9,7 @@
     "preserveConstEnums": true,
     "sourceMap": true,
     "noEmit": false,
-    "emitDeclarationOnly": true,
+    "emitDeclarationOnly": false,
     "inlineSources": true
   }
 }
